--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
   /* color: white; */
 }
+
+/* skills Kirin_Kinomoto / MotionElements.com */
 :root {
   /* COLORS */
   --blue: #3cc2ef;
